Refactor Adapters & Controllers to fix remaining code smells (Issue #59)